# pico_clock_with_hour_temp_and_blinker_reminder

./: .gitignore  CMakeLists.txt  init_git_repo.sh  pico-ssd1306.cmake  push.sh  start.sh
_inc/: __preprocessor__.h
_src/: main.c
